--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Byte-compiled / optimized / DLL files
+# Dependencies
+node_modules/
+.claude/
+
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -20,88 +20,13 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
+# Virtual environments
 .env
 .venv
 env/
@@ -111,32 +36,14 @@ env.bak/
 venv.bak/
 hsm_env/
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS files
+# OS
 .DS_Store
 .DS_Store?
 ._*
@@ -144,80 +51,17 @@ dmypy.json
 .Trashes
 ehthumbs.db
 Thumbs.db
+Desktop.ini
 
-# Certificate files (security) - but allow root certificates
+# Project specific
 *.pfx
 *.p12
-*.key
-*.jks
-*.keystore
-
-# Allow root certificates folder with actual certificate files for user convenience
-!root_certificates/
-!root_certificates/*/
-!root_certificates/*/*.md
-!root_certificates/*/*.pem
-!root_certificates/*/*.crt
-!root_certificates/*/*.cer
-trusted_roots/
-
-# Signed XML files (may contain sensitive data)
+nul
+test.xml
+*.signed.xml
 *_signed.xml
-signed_*.xml
-
-# HSM configuration files
-*.dll
-hsm_config.ini
 
 # Temporary files
-temp/
-tmp/
 *.tmp
 *.temp
-*.ps1
-
-# Log files
 *.log
-logs/
-
-# Test outputs
-test_output/
-test_results/
-
-# Local configuration
-config.local.py
-settings.local.py
-
-# Documentation builds
-docs/build/
-docs/_build/
-
-# Backup files
-*.bak
-*.backup
-*.orig
-
-# Windows specific
-*.lnk
-
-# Package files
-*.tar.gz
-*.zip
-*.rar
-
-# Development database
-*.db
-*.sqlite
-
-# PyCharm
-.idea/
-
-# Visual Studio Code
-.vscode/settings.json
-.vscode/launch.json
-.vscode/extensions.json
-
-# Local test files
-test_*.xml
-example_*.xml
-demo_*.xml
